ref: refactoring for better threading